# longNumbers

./: .gitignore  CMakeLists.txt  longArithmetic.cpp  longArithmetic.h  main.cpp
calculationofpi/: piCalculation.cpp  piCalculation.h
lib/: longArithmetic.cpp  longArithmetic.h
tests/: testOfArithmetics.cpp  testOfPi.cpp
